# mp3-scan

./: .gitignore  pyproject.toml  readme.md  requirements.txt
mp3_scan/: decision_tsv.py  mp3_item.py  mp3_move.py  mp3_tsv.py  types.py
test/: test-decision.tsv
