[tool.poetry]
name = "mp3-scan"
version = "1.0.0"
description = ""
authors = ["risonakamo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
devtools = "^0.12.2"
pydantic = "^2.4.2"
loguru = "^0.7.2"
rich = "^13.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
